Adjust based on feedback. Optimise data load to avoid time out

--- a/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring_semantic_precision_with_minimum_score.ipynb
+++ b/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring_semantic_precision_with_minimum_score.ipynb
@@ -121,7 +121,7 @@
         "from getpass import getpass\n",
         "import json\n",
         "import gzip\n",
-        "from tqdm.notebook import tqdm as tqdm"
+        "from tqdm.auto import tqdm as tqdm"
       ]
     },
     {
@@ -153,17 +153,15 @@
       },
       "outputs": [],
       "source": [
-        "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
-        "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+        "# https://www.elastic.co/docs/deploy-manage/deploy/cloud-enterprise/connect-elasticsearch#ece-connect-endpoint\n",
+        "ELASTIC_ENDPOINT = input(\"Elastic HTTPS Endpoint: \")\n",
         "\n",
         "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
         "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
         "\n",
         "# Create the client instance\n",
         "client = Elasticsearch(\n",
-        "    # For local development\n",
-        "    # hosts=[\"http://localhost:9200\"]\n",
-        "    cloud_id=ELASTIC_CLOUD_ID,\n",
+        "    hosts=[ELASTIC_ENDPOINT],\n",
         "    api_key=ELASTIC_API_KEY,\n",
         "    request_timeout=120\n",
         ")\n",
@@ -386,7 +384,7 @@
       "source": [
         "### Run data import script\n",
         "\n",
-        "This will take a little while..."
+        "This will take a little while, probably around 15 minutes..."
       ]
     },
     {
@@ -421,6 +419,7 @@
         "\n",
         "for ok, info in helpers.streaming_bulk(\n",
         "    client=client,\n",
+        "    chunk_size=16,\n",
         "    actions=data_generator(file_json, INDEX_NAME),\n",
         "    raise_on_error=True,\n",
         "):\n",
@@ -463,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "ad417b4b3f50c889",
       "metadata": {
         "id": "ad417b4b3f50c889",
