Update menu for the agent

--- a/supporting-blog-content/building-actionable-ai-automating-it-requests-with-agent-builder-and-one-workflow/Try it yourself Agents/service_now_utility_agent.ipynb
+++ b/supporting-blog-content/building-actionable-ai-automating-it-requests-with-agent-builder-and-one-workflow/Try it yourself Agents/service_now_utility_agent.ipynb
@@ -29,7 +29,7 @@
     ">\n",
     "> **1.** 📝 Create a New Record\n",
     "> **2.** 🛒 Order a Catalog Item\n",
-    "> **3.** 🔍 Search / Get Records\n",
+    "> **3.** 🔍 Search / Get Records (e.g., incident table)\n",
     "> **4.** 🔄 Update an Existing Record\n",
     "\n",
     "**Routing:**\n",
