Apply suggestions from code review
Co-authored-by: Carly Richmond <74931905+carlyrichmond@users.noreply.github.com>

--- a/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring_semantic_precision_with_minimum_score.ipynb
+++ b/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring_semantic_precision_with_minimum_score.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring-semantic-precision-with-minimum-score.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
-        "Learn how to use min_score with semantic text and hybrid search to improve precision. Please see [blog post for further context](https://www.elastic.co/search-labs/blog/semantic-precision-with-minimum-score)"
+        "Learn how to use min_score with semantic text and hybrid search to improve precision. Please see [blog post for further context](https://www.elastic.co/search-labs/blog/semantic-precision-with-minimum-score)."
       ]
     },
     {
