Finalised data download link for pull request

--- a/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring_semantic_precision_with_minimum_score.ipynb
+++ b/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/ensuring_semantic_precision_with_minimum_score.ipynb
@@ -358,7 +358,7 @@
         "id": "gPSoFx2I0_Wq"
       },
       "source": [
-        "### Colab - Download Data - TODO update with real URL\n",
+        "### Colab - Download Data\n",
         "\n",
         "If running the notebook in Colab, as opposed to checking out or downloading the elasticsearch-labs repository, we need to download the data to the colab environment"
       ]
@@ -372,7 +372,7 @@
       },
       "outputs": [],
       "source": [
-        "!wget -O movies.json.gz https://github.com/mbrunnert/elasticsearch-labs/raw/refs/heads/ensuring-semantic-precision-with-minimum-score/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/movies.json.gz"
+        "!wget -O movies.json.gz https://github.com/elastic/elasticsearch-labs/raw/refs/heads/main/supporting-blog-content/ensuring-semantic-precision-with-minimum-score/movies.json.gz"
       ]
     },
     {
