adding error note and better error handling on inference endpoint creation

--- a/supporting-blog-content/elasticsearch-inference-api-and-hugging-face/notebook.ipynb
+++ b/supporting-blog-content/elasticsearch-inference-api-and-hugging-face/notebook.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install requests elasticsearch -q"
+    "%pip install requests elasticsearch dotenv -q"
    ]
   },
   {
@@ -123,6 +123,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "tldq3os7m8o",
+   "metadata": {},
+   "source": [
+    "> **NOTE:** Check your Hugging Face endpoint for any resource unavailable issues. If you encounter a `resource_already_exists_exception`, run the [cleanup](#Cleanup) code snippet below and re-run this cell."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "40eba1a3",
@@ -147,7 +155,15 @@
     "        resp[\"inference_id\"],\n",
     "    )\n",
     "except Exception as e:\n",
-    "    print(\"Error creating chat completion inference endpoint:\", {e})"
+    "    if hasattr(e, \"body\") and \"error\" in e.body:\n",
+    "        error_info = e.body[\"error\"]\n",
+    "        print(f\"Error: {error_info.get('reason', str(e))}\")\n",
+    "\n",
+    "        if \"caused_by\" in error_info:\n",
+    "            print(f\"Caused by: {error_info['caused_by'].get('reason', '')}\")\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Error creating chat completion inference endpoint: {e}\")"
    ]
   },
   {
